--- a/components/share-buttons.module.scss
+++ b/components/share-buttons.module.scss
@@ -2,5 +2,8 @@
 
 .share {
 	display: flex;
-	gap: lib.$layout-spacing-small;
+
+	> * {
+		margin-right: lib.$layout-spacing-small;
+	}
 }
